[gd_scene load_steps=2 format=3 uid="uid://c8ralsbthbi8w"]

[ext_resource type="Script" uid="uid://cunybw3g51dp3" path="res://scripts/lobby.gd" id="1_o1atq"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_right = 178.0
offset_bottom = 200.0
scale = Vector2(10, 10)
script = ExtResource("1_o1atq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 174.0
offset_bottom = 124.0

[node name="PlayersLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Players:"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 13.1
offset_top = 138.1
offset_right = 71.1
offset_bottom = 161.1

[node name="StartButton" type="Button" parent="."]
layout_mode = 2
offset_left = 11.7
offset_top = 162.1
offset_right = 154.7
offset_bottom = 193.1
text = "Start Game"

[node name="PlayerList" type="ItemList" parent="."]
layout_mode = 2
offset_left = 8.0
offset_top = 31.0
offset_right = 174.0
offset_bottom = 135.0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
